--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.grischenkomaxim.myhealth"
-        minSdkVersion 24
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -19,11 +19,10 @@ android {
 }
 
 dependencies {
-    def room_version = "1.1.1"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'com.google.android.material:material:1.0.0-beta01'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
@@ -34,4 +33,7 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.1.0"
     testImplementation "android.arch.persistence.room:testing:1.1.0"
     implementation 'androidx.viewpager:viewpager:1.0.0'
+
+    //chart
+    implementation 'com.jjoe64:graphview:4.2.2'
 }
